// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeInput onBlur 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  -webkit-appearance: none;
  border-color: transparent;
  height: 24px;
  width: 100%;
  padding: 0px;
  cursor: pointer;
  background: transparent;
  margin: 0px;
}

.c1::-moz-focus-inner {
  border: none;
}

.c1::-moz-focus-outer {
  border: none;
}

.c1::-webkit-slider-runnable-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c1::-webkit-slider-thumb {
  margin-top: -10px;
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
}

.c1::-webkit-slider-thumb:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1::-moz-range-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c1::-moz-range-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c1::-ms-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c1:hover::-moz-range-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1:hover::-ms-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1::-ms-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
  border-color: transparent;
  color: transparent;
}

.c1::-ms-fill-lower {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c1::-ms-fill-upper {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c1:focus-visible {
  outline: 0;
}

.c1:focus {
  outline: none;
}

<div
  class="c0"
>
  <input
    aria-valuemax="10"
    aria-valuemin="0"
    aria-valuenow="5"
    class="c1"
    max="10"
    min="0"
    step="1"
    type="range"
    value="5"
  />
</div>
`;

exports[`RangeInput onChange 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  -webkit-appearance: none;
  border-color: transparent;
  height: 24px;
  width: 100%;
  padding: 0px;
  cursor: pointer;
  background: transparent;
  margin: 0px;
}

.c1::-moz-focus-inner {
  border: none;
}

.c1::-moz-focus-outer {
  border: none;
}

.c1::-webkit-slider-runnable-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c1::-webkit-slider-thumb {
  margin-top: -10px;
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
}

.c1::-webkit-slider-thumb:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1::-moz-range-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c1::-moz-range-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c1::-ms-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c1:hover::-moz-range-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1:hover::-ms-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1::-ms-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
  border-color: transparent;
  color: transparent;
}

.c1::-ms-fill-lower {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c1::-ms-fill-upper {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c1:focus-visible {
  outline: 0;
}

.c1:focus {
  outline: none;
}

<div
  class="c0"
>
  <input
    aria-valuemax="10"
    aria-valuemin="0"
    aria-valuenow="5"
    class="c1"
    max="10"
    min="0"
    step="1"
    type="range"
    value="5"
  />
</div>
`;

exports[`RangeInput onFocus 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  -webkit-appearance: none;
  border-color: transparent;
  height: 24px;
  width: 100%;
  padding: 0px;
  cursor: pointer;
  background: transparent;
  margin: 0px;
}

.c1::-moz-focus-inner {
  border: none;
}

.c1::-moz-focus-outer {
  border: none;
}

.c1::-webkit-slider-runnable-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c1::-webkit-slider-thumb {
  margin-top: -10px;
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
}

.c1::-webkit-slider-thumb:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1::-moz-range-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c1::-moz-range-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1::-moz-range-thumb > circle,
.c1::-moz-range-thumb > ellipse,
.c1::-moz-range-thumb > line,
.c1::-moz-range-thumb > path,
.c1::-moz-range-thumb > polygon,
.c1::-moz-range-thumb > polyline,
.c1::-moz-range-thumb > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1::-moz-range-thumb::-moz-focus-inner {
  border: 0;
}

.c1::-ms-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1::-ms-thumb > circle,
.c1::-ms-thumb > ellipse,
.c1::-ms-thumb > line,
.c1::-ms-thumb > path,
.c1::-ms-thumb > polygon,
.c1::-ms-thumb > polyline,
.c1::-ms-thumb > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1::-ms-thumb::-moz-focus-inner {
  border: 0;
}

.c1:hover::-moz-range-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1:hover::-ms-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1::-ms-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
  border-color: transparent;
  color: transparent;
}

.c1::-ms-fill-lower {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c1::-ms-fill-upper {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c1:focus::-webkit-slider-thumb {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1:focus::-webkit-slider-thumb > circle,
.c1:focus::-webkit-slider-thumb > ellipse,
.c1:focus::-webkit-slider-thumb > line,
.c1:focus::-webkit-slider-thumb > path,
.c1:focus::-webkit-slider-thumb > polygon,
.c1:focus::-webkit-slider-thumb > polyline,
.c1:focus::-webkit-slider-thumb > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1:focus::-webkit-slider-thumb::-moz-focus-inner {
  border: 0;
}

.c1:focus-visible {
  outline: 0;
}

.c1:focus {
  outline: none;
}

<div
  class="c0"
>
  <input
    aria-valuemax="10"
    aria-valuemin="0"
    aria-valuenow="5"
    class="c1"
    max="10"
    min="0"
    step="1"
    type="range"
    value="5"
  />
</div>
`;

exports[`RangeInput renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  -webkit-appearance: none;
  border-color: transparent;
  height: 24px;
  width: 100%;
  padding: 0px;
  cursor: pointer;
  background: transparent;
  margin: 0px;
}

.c1::-moz-focus-inner {
  border: none;
}

.c1::-moz-focus-outer {
  border: none;
}

.c1::-webkit-slider-runnable-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c1::-webkit-slider-thumb {
  margin-top: -10px;
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
}

.c1::-webkit-slider-thumb:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1::-moz-range-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c1::-moz-range-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c1::-ms-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c1:hover::-moz-range-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1:hover::-ms-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1::-ms-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
  border-color: transparent;
  color: transparent;
}

.c1::-ms-fill-lower {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c1::-ms-fill-upper {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c1:focus-visible {
  outline: 0;
}

.c1:focus {
  outline: none;
}

<div
  class="c0"
>
  <input
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="c1"
    max="100"
    min="0"
    step="1"
    type="range"
    value="50"
  />
</div>
`;

exports[`RangeInput should have no accessibility violations 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  -webkit-appearance: none;
  border-color: transparent;
  height: 24px;
  width: 100%;
  padding: 0px;
  cursor: pointer;
  background: transparent;
  margin: 0px;
}

.c1::-moz-focus-inner {
  border: none;
}

.c1::-moz-focus-outer {
  border: none;
}

.c1::-webkit-slider-runnable-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c1::-webkit-slider-thumb {
  margin-top: -10px;
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
}

.c1::-webkit-slider-thumb:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1::-moz-range-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c1::-moz-range-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c1::-ms-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c1:hover::-moz-range-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1:hover::-ms-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1::-ms-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
  border-color: transparent;
  color: transparent;
}

.c1::-ms-fill-lower {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c1::-ms-fill-upper {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c1:focus-visible {
  outline: 0;
}

.c1:focus {
  outline: none;
}

<div
  class="c0"
>
  <input
    aria-label="test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="c1"
    max="100"
    min="0"
    step="1"
    type="range"
    value="50"
  />
</div>
`;

exports[`RangeInput track themed 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  -webkit-appearance: none;
  border-color: transparent;
  height: 24px;
  width: 100%;
  padding: 0px;
  cursor: pointer;
  background: transparent;
  margin: 0px;
}

.c1::-moz-focus-inner {
  border: none;
}

.c1::-moz-focus-outer {
  border: none;
}

.c1::-webkit-slider-runnable-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(125,76,219,1);
}

.c1::-webkit-slider-thumb {
  margin-top: -10px;
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
}

.c1::-webkit-slider-thumb:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1::-moz-range-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(125,76,219,1);
}

.c1::-moz-range-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c1::-ms-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c1:hover::-moz-range-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1:hover::-ms-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1::-ms-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(125,76,219,1);
  border-color: transparent;
  color: transparent;
}

.c1::-ms-fill-lower {
  background: rgba(125,76,219,1);
  border-color: transparent;
}

.c1::-ms-fill-upper {
  background: rgba(125,76,219,1);
  border-color: transparent;
}

.c1:focus-visible {
  outline: 0;
}

.c1:focus {
  outline: none;
}

<div
  class="c0"
>
  <input
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="10"
    class="c1"
    max="100"
    min="0"
    step="1"
    type="range"
    value="10"
  />
</div>
`;

exports[`RangeInput track themed with color and opacity 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  -webkit-appearance: none;
  border-color: transparent;
  height: 24px;
  width: 100%;
  padding: 0px;
  cursor: pointer;
  background: transparent;
  margin: 0px;
}

.c1::-moz-focus-inner {
  border: none;
}

.c1::-moz-focus-outer {
  border: none;
}

.c1::-webkit-slider-runnable-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(125,76,219,0.3);
}

.c1::-webkit-slider-thumb {
  margin-top: -10px;
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
}

.c1::-webkit-slider-thumb:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1::-moz-range-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(125,76,219,0.3);
}

.c1::-moz-range-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c1::-ms-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c1:hover::-moz-range-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1:hover::-ms-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1::-ms-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(125,76,219,0.3);
  border-color: transparent;
  color: transparent;
}

.c1::-ms-fill-lower {
  background: rgba(125,76,219,0.3);
  border-color: transparent;
}

.c1::-ms-fill-upper {
  background: rgba(125,76,219,0.3);
  border-color: transparent;
}

.c1:focus-visible {
  outline: 0;
}

.c1:focus {
  outline: none;
}

<div
  class="c0"
>
  <input
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="10"
    class="c1"
    max="100"
    min="0"
    step="1"
    type="range"
    value="10"
  />
</div>
`;

exports[`RangeInput with min and max offset 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  -webkit-appearance: none;
  border-color: transparent;
  height: 24px;
  width: 100%;
  padding: 0px;
  cursor: pointer;
  background: transparent;
  margin: 0px;
}

.c1::-moz-focus-inner {
  border: none;
}

.c1::-moz-focus-outer {
  border: none;
}

.c1::-webkit-slider-runnable-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c1::-webkit-slider-thumb {
  margin-top: -10px;
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
}

.c1::-webkit-slider-thumb:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1::-moz-range-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c1::-moz-range-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c1::-ms-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c1:hover::-moz-range-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1:hover::-ms-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1::-ms-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
  border-color: transparent;
  color: transparent;
}

.c1::-ms-fill-lower {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c1::-ms-fill-upper {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c1:focus-visible {
  outline: 0;
}

.c1:focus {
  outline: none;
}

<div
  class="c0"
>
  <input
    aria-valuemax="20"
    aria-valuemin="10"
    aria-valuenow="15"
    class="c1"
    max="20"
    min="10"
    step="1"
    type="range"
    value="15"
  />
</div>
`;

exports[`RangeInput with multi color 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  -webkit-appearance: none;
  border-color: transparent;
  height: 24px;
  width: 100%;
  padding: 0px;
  cursor: pointer;
  background: transparent;
  margin: 0px;
}

.c1::-moz-focus-inner {
  border: none;
}

.c1::-moz-focus-outer {
  border: none;
}

.c1::-webkit-slider-runnable-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: linear-gradient(to right,rgba(255,0,0,0.5) 0%,rgba(255,0,0,0.5) 22.22222222222222%,rgba(255,255,0,1) 22.22222222222222%,rgba(255,255,0,1) 44.44444444444444%,rgba(0,0,0,0.2) 44.44444444444444%,rgba(0,0,0,0.2));
}

.c1::-webkit-slider-thumb {
  margin-top: -10px;
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
}

.c1::-webkit-slider-thumb:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1::-moz-range-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: linear-gradient(to right,rgba(255,0,0,0.5) 0%,rgba(255,0,0,0.5) 22.22222222222222%,rgba(255,255,0,1) 22.22222222222222%,rgba(255,255,0,1) 44.44444444444444%,rgba(0,0,0,0.2) 44.44444444444444%,rgba(0,0,0,0.2));
}

.c1::-moz-range-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c1::-ms-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c1:hover::-moz-range-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1:hover::-ms-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1::-ms-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: linear-gradient(to right,rgba(255,0,0,0.5) 0%,rgba(255,0,0,0.5) 22.22222222222222%,rgba(255,255,0,1) 22.22222222222222%,rgba(255,255,0,1) 44.44444444444444%,rgba(0,0,0,0.2) 44.44444444444444%,rgba(0,0,0,0.2));
  border-color: transparent;
  color: transparent;
}

.c1::-ms-fill-lower {
  background: linear-gradient(to right,rgba(255,0,0,0.5) 0%,rgba(255,0,0,0.5) 22.22222222222222%,rgba(255,255,0,1) 22.22222222222222%,rgba(255,255,0,1) 44.44444444444444%,rgba(0,0,0,0.2) 44.44444444444444%,rgba(0,0,0,0.2));
  border-color: transparent;
}

.c1::-ms-fill-upper {
  background: linear-gradient(to right,rgba(255,0,0,0.5) 0%,rgba(255,0,0,0.5) 22.22222222222222%,rgba(255,255,0,1) 22.22222222222222%,rgba(255,255,0,1) 44.44444444444444%,rgba(0,0,0,0.2) 44.44444444444444%,rgba(0,0,0,0.2));
  border-color: transparent;
}

.c1:focus-visible {
  outline: 0;
}

.c1:focus {
  outline: none;
}

<div
  class="c0"
>
  <input
    aria-valuemax="10"
    aria-valuemin="1"
    aria-valuenow="5"
    class="c1"
    color="[object Object],[object Object],[object Object]"
    max="10"
    min="1"
    step="1"
    type="range"
    value="5"
  />
</div>
`;

exports[`RangeInput with single color 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  -webkit-appearance: none;
  border-color: transparent;
  height: 24px;
  width: 100%;
  padding: 0px;
  cursor: pointer;
  background: transparent;
  margin: 0px;
}

.c1::-moz-focus-inner {
  border: none;
}

.c1::-moz-focus-outer {
  border: none;
}

.c1::-webkit-slider-runnable-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: linear-gradient( to right, #81FCED, #81FCED 44.44444444444444%, rgba(0,0,0,0.2) 44.44444444444444%, rgba(0,0,0,0.2) );
}

.c1::-webkit-slider-thumb {
  margin-top: -10px;
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
}

.c1::-webkit-slider-thumb:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1::-moz-range-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: linear-gradient( to right, #81FCED, #81FCED 44.44444444444444%, rgba(0,0,0,0.2) 44.44444444444444%, rgba(0,0,0,0.2) );
}

.c1::-moz-range-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c1::-ms-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c1:hover::-moz-range-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1:hover::-ms-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1::-ms-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: linear-gradient( to right, #81FCED, #81FCED 44.44444444444444%, rgba(0,0,0,0.2) 44.44444444444444%, rgba(0,0,0,0.2) );
  border-color: transparent;
  color: transparent;
}

.c1::-ms-fill-lower {
  background: linear-gradient( to right, #81FCED, #81FCED 44.44444444444444%, rgba(0,0,0,0.2) 44.44444444444444%, rgba(0,0,0,0.2) );
  border-color: transparent;
}

.c1::-ms-fill-upper {
  background: linear-gradient( to right, #81FCED, #81FCED 44.44444444444444%, rgba(0,0,0,0.2) 44.44444444444444%, rgba(0,0,0,0.2) );
  border-color: transparent;
}

.c1:focus-visible {
  outline: 0;
}

.c1:focus {
  outline: none;
}

<div
  class="c0"
>
  <input
    aria-valuemax="10"
    aria-valuemin="1"
    aria-valuenow="5"
    class="c1"
    color="accent-3"
    max="10"
    min="1"
    step="1"
    type="range"
    value="5"
  />
</div>
`;
